# Todo_App_FastAPI_Neon_DB

backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_main.py
frontend/: .env  package-lock.json  package.json
frontend/src/Components/: CreateTodo.tsx  DeleteTodo.tsx  TodoList.tsx  UpdateTodo.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/todos/: route.ts
frontend/src/app/api/todos/[id]/: route.ts
frontend/src/lib/: const.ts
frontend/src/types/: todo.ts
todo-app/: pyproject.toml
todo-app/app/: main.py
todo-app/tests/: test_main.py
